force-app/main/default/objects/BLN_RebookReasonMapping__mdt/BLN_RebookReasonMapping__mdt.object-meta.xml
<CustomObject>
    <description>FOUK-6281 This metadata created for rebook</description>
    <label>Rebook Reasons Mapping</label>
    <pluralLabel>Rebook Reasons Mappings</pluralLabel>
</CustomObject>