force-app/main/default/objects/BLN_RebookReasonMapping__mdt/fields/BLN_DrivenBy__c.field-meta.xml
<CustomField>
    <fullName>BLN_DrivenBy__c</fullName>
    <description>FOUK-6281 This field created for Rebook - Belron or Customer Driven</description>
    <label>Belron or Customer Driven</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Belron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>