force-app/main/default/objects/BLN_RebookReasonMapping__mdt/fields/BLN_IsActive__c.field-meta.xml
<CustomField>
    <fullName>BLN_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-6281 This field created for Rebook Is Active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>