force-app/main/default/objects/BLN_RebookReasonMapping__mdt/fields/BLN_Outcome__c.field-meta.xml
<CustomField>
    <fullName>BLN_Outcome__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FOUK-6281 This field created for Rebook Possible Outcome</description>
    <label>Possible Outcome</label>
    <type>Checkbox</type>
</CustomField>