force-app/main/default/objects/BLN_RebookReasonMapping__mdt/fields/BLN_Reason__c.field-meta.xml
<CustomField>
    <fullName>BLN_Reason__c</fullName>
    <description>FOUK-6281 This metadata created for rebook</description>
    <label>Rebook Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Issue</fullName>
                <default>true</default>
                <label>Customer Issue</label>
            </value>
            <value>
                <fullName>Capacity Issue</fullName>
            </value>
            <value>
                <fullName>Customer Vehicle Issue</fullName>
            </value>
            <value>
                <fullName>Glass/Parts Damaged</fullName>
            </value>
            <value>
                <fullName>Location/Weather Not Suitable</fullName>
            </value>
            <value>
                <fullName>Part Identification</fullName>
            </value>
            <value>
                <fullName>Payment/Billing Issue</fullName>
            </value>
            <value>
                <fullName>Recalibration Issue</fullName>
            </value>
            <value>
                <fullName>Technician Issues</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Stock/Supply Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>