force-app/main/default/objects/BLN_RebookReasonMapping__mdt/fields/BLN_SubReason__c.field-meta.xml
<CustomField>
    <fullName>BLN_SubReason__c</fullName>
    <description>FOUK-6281 This field created for Rebook  Sub-Reason</description>
    <label>Rebook Sub-Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lack of Capacity/Overbooked</fullName>
                <default>true</default>
                <label>Lack of Capacity/Overbooked</label>
            </value>
            <value>
                <fullName>Cust Unavailable/Cancelled</fullName>
            </value>
            <value>
                <fullName>Customer In day Cancellation</fullName>
            </value>
            <value>
                <fullName>Customer No Show</fullName>
            </value>
            <value>
                <fullName>Body Rust Prevented Work</fullName>
            </value>
            <value>
                <fullName>Car Too Damaged To Carry Out Work</fullName>
            </value>
            <value>
                <fullName>Glass Damaged</fullName>
            </value>
            <value>
                <fullName>Poor Weather-Cust No Cover/Doesn&apos;t Want In Branch</fullName>
            </value>
            <value>
                <fullName>Location Not suitable</fullName>
            </value>
            <value>
                <fullName>Additional Part Required</fullName>
            </value>
            <value>
                <fullName>Wrong Part Ordered</fullName>
            </value>
            <value>
                <fullName>Not Covered</fullName>
            </value>
            <value>
                <fullName>Pre/Post Scan Error</fullName>
            </value>
            <value>
                <fullName>Technician Doesn&apos;t Have Correct Skill/ Equipment</fullName>
            </value>
            <value>
                <fullName>Too Large to Repair</fullName>
            </value>
            <value>
                <fullName>Customer Concern, Repair Cracking Off</fullName>
            </value>
            <value>
                <fullName>Multiple Impact on W/S</fullName>
            </value>
            <value>
                <fullName>Repair too Small/No Damage</fullName>
            </value>
            <value>
                <fullName>Repair Done Before</fullName>
            </value>
            <value>
                <fullName>Location of Repair on W/S</fullName>
            </value>
            <value>
                <fullName>Repair Cracked Off</fullName>
            </value>
            <value>
                <fullName>Part Not Delivered - Delayed/Backordered</fullName>
            </value>
            <value>
                <fullName>Part Lost/Damaged - Retail</fullName>
            </value>
            <value>
                <fullName>Mislabelled/Incorrect Part Delivered</fullName>
            </value>
            <value>
                <fullName>Technician Absent</fullName>
            </value>
            <value>
                <fullName>Technician Missed Appt Time/Mobile Only</fullName>
            </value>
            <value>
                <fullName>Technician Van Issues/Breakdown</fullName>
            </value>
            <value>
                <fullName>Repair Too Large After Completion</fullName>
            </value>
            <value>
                <fullName>Customer Initiated Location Change</fullName>
            </value>
            <value>
                <fullName>Duplicate Work Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>